tests/fixtures/valid/std_reflection_import.incn
"""Valid fixture: std.reflection import required for FieldInfo types"""

from std.reflection import FieldInfo

def describe(fields: List[FieldInfo]) -> None:
    pass
