tests/fixtures/invalid/std_reflection_missing_import.incn
"""Invalid fixture: std.reflection import missing"""

def describe(fields: List[FieldInfo]) -> None:
    pass
